--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,22 @@
+astroid==2.14.1
+colorama==0.4.6
+coverage==7.1.0
+dill==0.3.6
+isort==5.12.0
+joblib==1.2.0
+lazy-object-proxy==1.9.0
+mccabe==0.7.0
 numpy==1.24.1
 pandas==1.5.3
+platformdirs==2.6.2
+pycodestyle==2.10.0
+pylint==2.16.0
 python-dateutil==2.8.2
 pytz==2022.7.1
+scikit-learn==1.2.1
+scipy==1.10.0
+SCons==4.4.0
 six==1.16.0
+threadpoolctl==3.1.0
+tomlkit==0.11.6
+wrapt==1.14.1
