--- a/requirements.txt
+++ b/requirements.txt
@@ -6,9 +6,11 @@ isort==5.12.0
 joblib==1.2.0
 lazy-object-proxy==1.9.0
 mccabe==0.7.0
-numpy==1.24.1
+mypy==1.0.0
+mypy-extensions==1.0.0
+numpy==1.24.2
 pandas==1.5.3
-platformdirs==2.6.2
+platformdirs==3.0.0
 pycodestyle==2.10.0
 pylint==2.16.1
 python-dateutil==2.8.2
@@ -19,4 +21,5 @@ SCons==4.4.0
 six==1.16.0
 threadpoolctl==3.1.0
 tomlkit==0.11.6
+typing_extensions==4.4.0
 wrapt==1.14.1
