--- a/requirements.txt
+++ b/requirements.txt
@@ -5,10 +5,12 @@ dill==0.3.6
 isort==5.12.0
 joblib==1.2.0
 lazy-object-proxy==1.9.0
+llvmlite==0.39.1
 mccabe==0.7.0
 mypy==1.0.0
 mypy-extensions==1.0.0
-numpy==1.24.2
+numba==0.56.4
+numpy==1.23.*
 pandas==1.5.3
 platformdirs==3.0.0
 pycodestyle==2.10.0
